# new_burials

./: .env  Cargo.toml  news.txt
migrations/2025-03-29-105849_12/: up.sql
src/: main.rs  routes.rs  schema.rs
src/models/: deceaseds.rs  mod.rs  organizations.rs  places.rs  reviews.rs  services.rs  users.rs
src/models/sql/: add_types.sql  mail.sql
src/utils/: auth.rs  crypto.rs  df.py  forms.rs  mod.rs
src/views/: admin.rs  auth.rs  deceaseds.rs  mod.rs  organizations.rs  page.rs  places.rs  progs.rs  reviews.rs  users.rs
static/scripts/: 22b3a38a.c9c497053703d6275828.js  75fc9c18.4e04b708e69a2dcc3c61.js  _app-d5868bbe5e2eba19ff3b.js  _buildManifest.js  _error-988be32e951e1575f797.js  admin4.js  cemeteries-95d8bfabfbc11f0d2ed4.js  gtm.js  index-e929be72c6fd3da36302.js  main-aa4681db5f478e665d74.js  main8.js  main9.js  map.js  polyfills-bb8b8034e06a609ceb9d.js  search-d5bedab70d84b6323f9c.js  styles.03039a2a83bfdac7f08d.js
static/styles/: bootstrap.css  bootstrap2.css  style.css
templates/desctop/: anon_footer.stpl  anon_header.stpl  footer.stpl  header.stpl
templates/desctop/admin/: create_city.stpl  create_country.stpl  create_district.stpl  create_region.stpl  create_service.stpl  edit_city.stpl  edit_country.stpl  edit_district.stpl  edit_region.stpl  edit_service.stpl  lists.stpl
templates/desctop/deceased/: anon_deceased.stpl  anon_wall.stpl  create_deceased.stpl  deceased.stpl  edit_deceased.stpl  wall.stpl
templates/desctop/generic/: about.stpl  bottom_menu.stpl  form.stpl  form2.stpl  org_form.stpl  place_form.stpl  top_menu.stpl  (+1 more)
(+48 files in other folders)
