[package]
name = "new_burials"
version = "1.0.1"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix-files = "0.6"
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
actix-redis = "0.10"
actix-multipart = "0.4.0-beta.12" 
futures = "0.3.5"
awc = "3.0.0"
actix-form-data = "0.6.2"
failure = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
actix-cors = "*"
reqwest = "0.11.7"
actix-rt = "2.7"
derive_more = "0.99.5"
futures-util = "0.3.5"
sailfish = "0.4.0"
sailfish-macros = "0.4.0"
external-ip = "4.1.0"
web-local-storage-api = "*"
actix-web-httpauth = "0.6.0"
bcrypt = "0.12.1"
jsonwebtoken = "8.1.0"
scraper = "0.12.0"
regex = "1.5.4"


[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false